[package]
name = "discord-bot"
version = "0.1.0"
edition = "2018"

#[dependencies]
#tokio = "1.13.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
#tokio = { version = "0.2", features = ["macros"] } 
#reqwest = { version = "0.11", features = ["json",] }
serenity = { default-features = false, features = ["client", "gateway",
"model","rustls_backend","framework","standard_framework"], version = "0.9.0-rc.2"}
diesel = "1.4.8"
 
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
dotenv ="0.15.0"
serde = {version ="1.0", features = ["derive"]}

